--- a/public/themes/widget/classic/css/classic_horizontal_style.css
+++ b/public/themes/widget/classic/css/classic_horizontal_style.css
@@ -20,22 +20,29 @@
 }
 .widgetStyledBorder{
 	height:7px;
-	background:url(/img/border.png);
+	/*background:url(../images/border.png);*/
 	margin:0px 15px;
 }
 
 /* here comes the css styles for this widget! */
 #widgetHeader{
+	font-family:Georgia;
 	padding:10px 15px;
+	-webkit-border-radius:4px;
+	-moz-border-radius:4px;
+	border-radius:4px;
 }
 	.theWidgetTitle{
 		font-size: 18px;
-		font-weight: bold;
-		color: #72777A;
+		font-weight: normal;
+		color: #5f5f5f;
 		text-align: left;
 		width: 70%;
 		float: left;
-		padding-top:4px;
+		padding-top:2px;
+	}
+	.theFeedbackAuthorName{
+		font-family:Georgia, "Times New Roman", Times, serif;
 	}
 	.theWidgetButtons{
 	
@@ -73,6 +80,9 @@
 	}
 	.theFeedback{
 		width:93%;
+		border-top:5px solid #868686;
+		border-bottom:5px solid #868686;		
+		padding:8px 0px;
 	}
 	.theFeedback.mid{
 		margin:0 auto;
@@ -80,14 +90,16 @@
 		.theFeedbackAvatar{
 			width:48px;
 			float:left;
+			padding:1px;
+			border:1px solid #CCC;
 		}
 		.theFeedbackAuthorInfo{
 			margin-left:58px;
 			height:60px;
 		}
-		
+		.theFeedbackAuthorName{font-family:Georgia, "Times New Roman", Times, serif;}
 		.theFeedbackText{
-			height:115px;
+			height:90px;
 			padding:10px 0px 5px;
 			line-height:18px;
 			overflow:hidden;
@@ -118,6 +130,7 @@
 	
 /* codes for the solo Feedback */
 .soloFeedbackAvatar{width:50px;float:left;text-align:center;}
+.soloFeedbackAvatar img{padding:1px;border:1px solid #CCC;}
 .soloFeedbackDetails{margin-left:60px;}
 	.soloFeedbackAuthor ul{
 		list-style:none;
@@ -127,6 +140,7 @@
 	.soloFeedbackAuthor ul li{
 		display:inline-block;
 		margin-right:5px;
+		font-family:Georgia, "Times New Roman", Times, serif;
 	}
 	.soloFeedbackText{
 		height:150px;
@@ -179,10 +193,10 @@
 }
 .pagination{text-align:center;font-size:11px;padding:0px 0px;margin-bottom:3px;overflow:hidden}
 	.pagination a{padding:2px 3px;color:#929191;text-decoration:none;}
-	.pagination a.activeSlide{background:#72abe0;color:#FFF;}
+	.pagination a.activeSlide{background:#a6a6a6;color:#FFF;}
 		#prev,#next{cursor:pointer;}
-		#prev:hover,#next:hover{color:#72abe0;}	
-		.pagination a:hover{color:#72abe0;text-decoration:underline;}
+		#prev:hover,#next:hover{color:#dbdbdb;}	
+		.pagination a:hover{color:#dbdbdb;text-decoration:underline;}
 
 /*fb like button hack*/
 .fb_send_button_form_widget{top:-198px !important;}
