--- a/public/themes/widget/classic/css/classic_popup_style.css
+++ b/public/themes/widget/classic/css/classic_popup_style.css
@@ -20,7 +20,7 @@
 }
 .widgetStyledBorder{
 	height:7px;
-	background:url(/img/border.png);
+	/*background:url(../images/border.png);*/
 	margin:0px 15px;
 }
 
@@ -33,13 +33,14 @@
 	border-radius:4px;
 }
 	.theWidgetTitle{
-		font-size: 16px;
+		font-size: 21px;
 		font-weight: normal;
-		color: #5f5f5f;
+		color: #9d9d9d;
 		text-align: left;
 		width: 70%;
 		float: left;
 		padding-top:2px;
+		font-family:Georgia, "Times New Roman", Times, serif;
 	}
 	.theFeedbackAuthorName{
 		font-family:Georgia, "Times New Roman", Times, serif;
@@ -68,14 +69,18 @@
 
 #theSoloBox{
 	padding:10px 10px;
-	height:170px;
+	height:180px;
+	margin-top:-10px;
 }
 #theLoopBox{
 	padding:10px 10px;
 }
 	#theSoloSlides{
 		padding:10px;
-		height:150px;
+		height:152px;
+		border-top:8px solid #868686;
+		border-bottom:8px solid #868686;		
+		background:#FFF;
 	}
 	#theSlides{
 		margin:10px 10px 0px;
@@ -90,6 +95,8 @@
 			float:left;
 			text-align:center;
 		}		
+		.soloFeedbackAvatar img{
+		}
 		.soloFeedbackDetails{
 			margin-left:160px;
 		}
@@ -104,6 +111,7 @@
 		.soloFeedbackAuthorName{
 			font-size:21px;
 			color:#292d2f;
+			font-family:Georgia, "Times New Roman", Times, serif;
 		}
 		.soloFeedbackAuthorCompany{
 			font-size:14px;
@@ -133,8 +141,12 @@
 			margin:0 auto;
 		}
 			.theFeedbackAvatar{
-				width:48px;
+				width:52px;
 				float:left;
+			}
+			.theFeedbackAvatar img{
+				padding:1px;
+				border:1px solid #e0e0e0;
 			}
 			.theFeedbackAuthorInfo{
 				margin-left:58px;
