--- a/public/themes/widget/silver/css/silver_horizontal_style.css
+++ b/public/themes/widget/silver/css/silver_horizontal_style.css
@@ -4,6 +4,7 @@
 	padding:0px;
 	margin:0px;	
 	min-width:760px;
+	background:url(../images/silver_bg.png) repeat-x;
 }
 .block{
 	display:block;
@@ -20,7 +21,7 @@
 }
 .widgetStyledBorder{
 	height:7px;
-	background:url(/img/border.png);
+	/*background:url(../images/border.png);*/
 	margin:0px 15px;
 }
 
@@ -30,8 +31,8 @@
 }
 	.theWidgetTitle{
 		font-size: 18px;
-		font-weight: bold;
-		color: #72777A;
+		font-weight: normal;
+		color: #5f5f5f;
 		text-align: left;
 		width: 70%;
 		float: left;
@@ -72,7 +73,13 @@
 		width:100%;
 	}
 	.theFeedback{
-		width:93%;
+		width:90%;
+		background:#FFF;
+		padding:8px;
+		border:1px solid #e0e0e0;
+		-webkit-border-radius:4px;
+		-moz-border-radius:4px;
+		border-radius:4px;
 	}
 	.theFeedback.mid{
 		margin:0 auto;
@@ -87,7 +94,7 @@
 		}
 		
 		.theFeedbackText{
-			height:115px;
+			height:95px;
 			padding:10px 0px 5px;
 			line-height:18px;
 			overflow:hidden;
@@ -117,6 +124,11 @@
 	
 	
 /* codes for the solo Feedback */
+.soloFeedback{padding:10px;background:#FFF;margin-top:-10px;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
+}
 .soloFeedbackAvatar{width:50px;float:left;text-align:center;}
 .soloFeedbackDetails{margin-left:60px;}
 	.soloFeedbackAuthor ul{
@@ -179,10 +191,10 @@
 }
 .pagination{text-align:center;font-size:11px;padding:0px 0px;margin-bottom:3px;overflow:hidden}
 	.pagination a{padding:2px 3px;color:#929191;text-decoration:none;}
-	.pagination a.activeSlide{background:#72abe0;color:#FFF;}
+	.pagination a.activeSlide{background:#a6a6a6;color:#FFF;}
 		#prev,#next{cursor:pointer;}
-		#prev:hover,#next:hover{color:#72abe0;}	
-		.pagination a:hover{color:#72abe0;text-decoration:underline;}
+		#prev:hover,#next:hover{color:#dbdbdb;}	
+		.pagination a:hover{color:#dbdbdb;text-decoration:underline;}
 
 /*fb like button hack*/
 .fb_send_button_form_widget{top:-198px !important;}
