--- a/public/themes/widget/silver/css/silver_popup_style.css
+++ b/public/themes/widget/silver/css/silver_popup_style.css
@@ -4,6 +4,7 @@
 	padding:0px;
 	margin:0px;	
 	min-width:760px;
+	background:url(../images/silver_bg.png) repeat-x top;
 }
 .block{
 	display:block;
@@ -20,7 +21,7 @@
 }
 .widgetStyledBorder{
 	height:7px;
-	background:url(/img/border.png);
+	/*background:url(../images/border.png);*/
 	margin:0px 15px;
 }
 
@@ -33,16 +34,18 @@
 	border-radius:4px;
 }
 	.theWidgetTitle{
-		font-size: 16px;
+		font-size: 21px;
 		font-weight: normal;
-		color: #5f5f5f;
+		color: #9d9d9d;
 		text-align: left;
 		width: 70%;
 		float: left;
 		padding-top:2px;
+		text-shadow:#e8e8e8 0px 1px;
+		font-family:Arial, Helvetica, sans-serif;
 	}
 	.theFeedbackAuthorName{
-		font-family:Georgia, "Times New Roman", Times, serif;
+		font-family:Arial, Helvetica, sans-serif;
 	}
 	.theWidgetButtons{
 	
@@ -75,7 +78,13 @@
 }
 	#theSoloSlides{
 		padding:10px;
-		height:150px;
+		height:148px;
+		border:1px solid #e0e0e0;
+		background:#FFF;
+		-webkit-border-radius:4px;
+		-moz-border-radius:4px;
+		border-radius:4px;
+		box-shadow:#DDD 0px 0px 5px;
 	}
 	#theSlides{
 		margin:10px 10px 0px;
@@ -90,6 +99,8 @@
 			float:left;
 			text-align:center;
 		}		
+		.soloFeedbackAvatar img{
+		}
 		.soloFeedbackDetails{
 			margin-left:160px;
 		}
@@ -133,8 +144,12 @@
 			margin:0 auto;
 		}
 			.theFeedbackAvatar{
-				width:48px;
+				width:52px;
 				float:left;
+			}
+			.theFeedbackAvatar img{
+				padding:1px;
+				border:1px solid #e0e0e0;
 			}
 			.theFeedbackAuthorInfo{
 				margin-left:58px;
