--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -412,6 +412,20 @@ border-radius:12px;
 border:1px solid #c1c8d0;
 font-weight:bold;
 }
+div.button-gray{
+background:#eceff1 url(../img/button-highlight.png) top repeat-x;
+color:#6b8194;
+width:50px;
+-webkit-border-radius:12px;
+-moz-border-radius:12px;
+border-radius:12px;
+border:1px solid #c1c8d0;
+font-weight:bold;    
+font-size:10px;
+margin-left:auto;
+margin-right:auto;
+margin-top:5px;
+}
 .widget-opts a.button-gray:hover{background:#dce9f5;}
 
 .feedback-td-font { font-size: 12px; }
@@ -647,18 +661,19 @@ input.large-text{padding:10px;width:80%;}
 .form-designs,.l-designs,.r-designs,.br-designs,.bl-designs,.tr-designs,.tl-designs{
     width:606px;
     float:left;
-    height:100px;
+    height:120px;
 }
 .form-design-group{
     width:586px;
     margin:5px 10px;
-    height:100px;
+    height:120px;
 }
 .form-design{
     width:81px;
     float:left;
     text-align:center;
     padding-top:5px;
+    padding-bottom:5px;
     border:1px solid #f4f4f4;
 }
 .tab-design{
