--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -715,3 +715,4 @@ input.large-text{padding:10px;width:80%;}
 .status-change,.priority-change{
     cursor: pointer;
 }
+#copycheck{width:300px;text-align:center;margin-left:-150px;left:50%;top:45%;position:absolute;color:#2d9400;}
