--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -702,7 +702,7 @@ input.large-text{padding:10px;width:80%;}
     -moz-border-radius:2px;
     border-radius:2px;
 }
-.selected-form,.selected-tab{
+.selected-theme{
     background:#CCC;
     cursor:pointer;
     background:#e1f8ff;
