--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -756,3 +756,14 @@ input.large-text, input.form-text{padding:10px;width:80%;}
     text-align:center;
 }
 .the-selected-widget-box img{margin:0 !important;}
+
+.regular-textarea{
+display: block;
+-webkit-border-radius: 6px;
+-moz-border-radius: 6px;
+border-radius: 6px;
+border: 1px solid #CCC;
+margin: 5px 5px;
+padding: 4px;
+font-size: 11px;
+color: #777;}
