--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -117,6 +117,8 @@ sup.count{background:#d92222;text-shadow:#a31a1a 0px -1px;color:#FFF;font-size:1
 #admin-panel .main-panel .admin-sorter-bar .pagination-text{text-align:center;padding-top:5px;font-size:11px;}
 #admin-panel .main-panel .admin-sorter-bar .pagination input.pagination-input{font-size:11px;width:10px;text-align:center;font-weight:bold;color:#5c646a;padding:1px 3px;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;border:1px solid #ababab;}
 
+#admin-panel .main-panel .admin-sorter-bar .select-options {width:11%;float:left;display:inline;overflow:hidden;margin-right:auto;margin-left:auto;padding-left:20px}
+
 #admin-panel .main-panel .the-feedbacks{padding:0px 0px;display:block;background:#FFF;font-size:10px;}
 #admin-panel .main-panel .the-feedbacks div{position:relative;margin:0; padding:0;}
 #admin-panel .main-panel .the-feedbacks .feedback{clear:both;float:left;display:block;width:100%;border-bottom:1px solid #e4e4e4;padding:15px 0px;}
