--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -771,7 +771,7 @@ margin: 5px 5px;
 padding: 4px;
 font-size: 11px;
 color: #777;}
-
+/*
 #formcodebox{
     display:block;
     background:#f4f4f4;
@@ -801,6 +801,43 @@ color: #777;}
 #formcodebox ul li.formcodelink4.active{background-position:-157px -147px;}
 #formcodebox ul li.active{background-color:#f4f4f4;color:#6b7984;border-top:1px solid #f4f4f4;border-bottom:1px solid #f4f4f4;}
 #formcodeboxcontent{margin-left:180px;background:#f4f4f4;}
+
+#formcodeboxcontent1,#formcodeboxcontent2,#formcodeboxcontent3,#formcodeboxcontent4{position:relative;text-align:center;width:496px;padding:10px 0px;}
+#formcodeboxcontent2,#formcodeboxcontent3,#formcodeboxcontent4{display:none;}
+#formcodeboxcontent input[type="text"],#formcodeboxcontent textarea{margin:5px auto !important;}
+.formcodelink1{background}
+*/
+
+#formcodebox{
+    display:block;
+    background:#f4f4f4;
+}
+#formcodeboxcontent:after{content: ".";  
+         display: block; 
+         height: 0; 
+         clear: both;
+         visibility: hidden; }
+#formcodebox ul{list-style:none;margin:0;padding:0;width:180px;float:left;margin-top:0px;background:#FFF;height:400px;}
+#formcodebox ul li{padding:12px 20px 12px 50px;font-weight:bold;cursor:pointer;margin:0px !important;
+    background:#FFF url(/img/formcodelinkicons.png) no-repeat;color:#627382;margin-top:-2px;
+    border-bottom:1px solid #f0f2f3;
+}
+#formcodebox ul li:hover{
+    background-color:#f0f2f3;
+}
+#formcodebox ul li.active div.formcodearrow{display:block;}
+#formcodebox ul li.formcodelink1.active{background-position:0px 0px;}
+#formcodebox ul li.formcodelink2.active{background-position:0px -48px;}
+#formcodebox ul li.formcodelink3.active{background-position:0px -96px;}
+#formcodebox ul li.formcodelink4.active{background-position:0px -147px;}
+#formcodebox ul li.formcodelink1{background-position:-157px 0px;}
+#formcodebox ul li.formcodelink2{background-position:-157px -48px;}
+#formcodebox ul li.formcodelink3{background-position:-157px -96px;}
+#formcodebox ul li.formcodelink4{background-position:-157px -147px;}
+#formcodebox ul li.active{background-color:#5e7790;color:#FFF;border-bottom:1px solid #f4f4f4;}
+#formcodebox ul li div.formcodearrow{width:11px;height:41px;background:url(/img/formcodearrow.png) no-repeat;position:absolute;right:-11px;top:0px;display:none;}
+#formcodeboxcontent{margin-left:180px;background:#f4f4f4;}
+
 
 #formcodeboxcontent1,#formcodeboxcontent2,#formcodeboxcontent3,#formcodeboxcontent4{position:relative;text-align:center;width:496px;padding:10px 0px;}
 #formcodeboxcontent2,#formcodeboxcontent3,#formcodeboxcontent4{display:none;}
