--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -721,6 +721,10 @@ input.large-text, input.form-text{padding:10px;width:80%;}
     cursor: pointer;
 }
 
+.status-change > select {
+    font-size: 10px;    
+}
+
 .widget-selection-block{
     display:block;
 }
