--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -725,6 +725,10 @@ input.large-text, input.form-text{padding:10px;width:80%;}
     font-size: 10px;    
 }
 
+.priority-change > select { 
+    font-size: 10px;    
+}
+
 .widget-selection-block{
     display:block;
 }
