--- a/public/css/s36_client_style.css
+++ b/public/css/s36_client_style.css
@@ -73,6 +73,7 @@
     right:-20px;
     height:45px;
     width:45px;
+    z-index: 999999;
     background:url(/img/s36-btn-cl.png) no-repeat; 
 }
 
