--- a/public/css/flags.css
+++ b/public/css/flags.css
@@ -1,7 +1,7 @@
 .flag {
 	width: 16px;
 	height: 11px;
-	background:url(../img/flags.png) no-repeat;
+	background:url(../img/flags.jpg) no-repeat;
 	float:left;
 	margin-left:5px;
 }
