--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -429,7 +429,7 @@ visibility: hidden;
 
 .woops .woops-header { margin: 0; padding:0; line-height: 1; text-align: center; color: #777; background: #DFDFDF; border: 1px solid #DFDFDF; font-size: 20px; }
 .woops .woops-content { margin: 0; color: #777; }
-.woops a.woops-a { color: #777; font-size: 14px; }
+.woops a.woops-a { color: #388e8e; font-size: 14px; }
 h2.woops-header a {color: #777}
 
 .category-box {
