--- a/public/themes/form/form-aglow.css
+++ b/public/themes/form/form-aglow.css
@@ -107,8 +107,9 @@ a.s36_btn:hover{
 	.s36_pages h3 a.s36_tip:hover{text-decoration:underline;}
 	.s36_pages h4{color:#6f7375;font-size:11px;margin:0px;padding:5px 0px;}
 	.s36_pages .step-contents{
-		padding-top:5px;
+		padding-top:0px;
         padding-right:30px;
+        padding-left:30px;
         display:block;
 	}
 	
