--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -851,7 +851,7 @@ color: #777;}
 #formcodeboxcontent2,#formcodeboxcontent3,#formcodeboxcontent4{display:none;}
 #formcodeboxcontent input[type="text"],#formcodeboxcontent textarea{margin:5px auto !important;}
 .formcodelink1{background}
-#bye {
+#bye a {
     background: url("/img/sign-off.png") no-repeat scroll 100% 15px transparent;
     color: #999999;
     float: right;
