--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -851,6 +851,13 @@ color: #777;}
 #formcodeboxcontent2,#formcodeboxcontent3,#formcodeboxcontent4{display:none;}
 #formcodeboxcontent input[type="text"],#formcodeboxcontent textarea{margin:5px auto !important;}
 .formcodelink1{background}
+#bye {
+    font-size: 10px;
+    font-weight: bold;
+    line-height: 48px;
+    text-align: right;
+    text-transform: uppercase;
+}
 #bye a {
     background: url("/img/sign-off.png") no-repeat scroll 100% 15px transparent;
     color: #999999;
