--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -862,6 +862,6 @@ color: #777;}
     background: url("/img/sign-off.png") no-repeat scroll 100% 15px transparent;
     color: #999999;
     float: right;
-    margin: 0 14px 0 0;
+    margin: -10px 14px 0 0;
     padding-right: 21px;
 }
