--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -870,3 +870,8 @@ color: #777;}
     z-index:999999;
     position:absolute !important;
 }
+
+.small-avatar {
+    position:absolute !important;
+}
+    
