applying drop shadow

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -869,4 +869,7 @@ color: #777;}
     display:none;
     z-index:999999;
     position:absolute !important;
+    -moz-box-shadow: 10px 10px 5px #888;
+    -webkit-box-shadow: 10px 10px 5px #888;
+    box-shadow: 10px 10px 5px #888;
 }
