--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -872,4 +872,5 @@ color: #777;}
     -moz-box-shadow: 10px 10px 5px #888;
     -webkit-box-shadow: 10px 10px 5px #888;
     box-shadow: 10px 10px 5px #888;
+    left:1%;
 }
