--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -873,4 +873,8 @@ color: #777;}
     -webkit-box-shadow: 10px 10px 5px #888;
     box-shadow: 10px 10px 5px #888;
     left:1%;
+    border-top:1px solid #ebecec;
+    border-left:1px solid #ebecec;
+    border-right:1px solid #d4d6d7;
+    border-bottom:1px solid #d4d6d7;
 }
