--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -872,9 +872,7 @@ color: #777;}
     -moz-box-shadow: 7px 7px 5px #888;
     -webkit-box-shadow: 7px 7px 5px #888;
     box-shadow: 7px 7px 5px #888;
-    left:1%;
-    border-top:1px solid #ebecec;
-    border-left:1px solid #ebecec;
-    border-right:1px solid #d4d6d7;
-    border-bottom:1px solid #d4d6d7;
+    left:-1%;
+    top:-1%;
+    border:10px solid #ebecec;
 }
