--- a/public/css/widget_master/embedded_widget_master_template.css
+++ b/public/css/widget_master/embedded_widget_master_template.css
@@ -4,7 +4,7 @@
 body{
 	padding:0px;
 	margin:0px;
-	font-family:Arial, Helvetica, sans-serif !important;
+	font-family:Arial, Helvetica, sans-serif;
 	font-size:12px;
 }
 div{
