--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -17,14 +17,14 @@
 .base-popup ul li:hover{cursor:pointer;}
 .base-popup ul li a{color:#767676;padding:3px 5px;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;}
 .base-popup ul li a.Matched,.base-popup ul li:hover a{color:#6e7f8d;font-weight:bold;background:#f5f5f7;}
-.base-popup a{font-weight:bold;}
+.base-popup a{font-weight:normal;}
 
 .base-popup .label{font-size:12px;font-weight:bold;padding-top:4px !important;color:#353535;}
 .base-popup input.popup-delete{width:134px;height:21px;background:url(../img/popup-delete.png);background-position:bottom;border:none;cursor:pointer;}
 .base-popup input.popup-delete:hover{background-position:top !important;}
 .base-popup input.button{border:none;font-weight:normal;color:#FFF;background:#b6bec1;-webkit-border-radius:6px;-moz-border-radius:6px;border-radius:6px;padding:3px 12px;text-shadow:#9ba3a6 0px -1px;font-size:11px;cursor:pointer;}
 .base-popup .popup-button{text-align:center;display:block;}
-.base-popup ul.email-picker li{padding:4px 0px;}
+.base-popup ul.email-picker li{padding:4px 0px;font-weight:bold}
 .base-popup ul.email-picker li a{color:#6e7e8e;}
 .base-popup ul.email-picker li a:hover{color:#3a4c5a;}
 .base-popup .email-list a{color:#6e7e8e}
