--- a/public/css/romanticc.css
+++ b/public/css/romanticc.css
@@ -16,7 +16,7 @@
 .base-popup ul{margin:0;padding:0;list-style:none;}
 .base-popup ul li:hover{cursor:pointer;}
 .base-popup ul li a{color:#767676;padding:3px 5px;-webkit-border-radius:8px;-moz-border-radius:8px;border-radius:8px;}
-.base-popup ul li a.Matched,.base-popup ul li:hover a{color:#6e7f8d;font-weight:bold;background:#f5f5f7;}
+.base-popup ul li a.Matched,.base-popup ul li:hover a{color:#6e7f8d;background:#f5f5f7;}
 .base-popup a{font-weight:normal;}
 
 .base-popup .label{font-size:12px;font-weight:bold;padding-top:4px !important;color:#353535;}
