--- a/public/css/s36_client_style.css
+++ b/public/css/s36_client_style.css
@@ -98,10 +98,11 @@
 .s36_embed_block_x{
     font-family:Arial, Helvetica, sans-serif;font-weight:bold;
     color:#333;
-    position:absolute;top:15px;
+    position:absolute;
+    top:11px;
     /*Temporary until viewall button is fixed*/
     /*right:170px;*/
-    right:47px;
+    right:44px;
     z-index:10000
 }
 .s36_embed_block_y{font-family:Arial, Helvetica, sans-serif;font-weight:bold;color:#333;position:absolute;bottom:58px;left:5px;z-index:10000}
