--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -45,7 +45,7 @@ end of reset */
 
 sup.count{
     background:#B0C4D5;/*#d92222;*/
-    text-shadow:#a31a1a 0px -1px;
+    text-shadow:0px -1px;
     color:#FFF;
     font-size:11px;
     box-shadow:#57626c 0px 1px 2px;
