--- a/public/css/widget_master/master.css
+++ b/public/css/widget_master/master.css
@@ -6,14 +6,14 @@ body{
 	margin:0px;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:12px;
-	background:url(../images/background.jpg);
+	background:url(../img/background.jpg);
 }
 a{color:#4894b3;text-decoration:none;}
 a:hover{color:#54a1c0;}
 
 
 #headerWrapper{
-	background:url(../images/gray-bg.jpg) repeat-x;
+	background:url(../img/gray-bg.jpg) repeat-x;
 	height:42px;
 	width:100%;
 	box-shadow:#aaa 0px 1px 5px;
