--- a/public/css/widget_master/hosted-single.css
+++ b/public/css/widget_master/hosted-single.css
@@ -36,6 +36,10 @@ div{
 	color:#aaa;
 	text-shadow:#EEE 0px 1px;
 }
+#headerTitle strong{color:#5d96d5;}
+#headerTitle span {padding-left:20px;text-shadow:#EEE 0px 1px;}
+#headerTitle span a{color:#000;font-size:14px;font-weight:bold;}
+#headerTitle a:hover{color:#666;}
 
 #bodyWrapper{
 	width:100%;
@@ -70,16 +74,11 @@ div{
 	padding-left:16px;
 	padding-top:30px;
 }
-	.theAuthorName{font-size:30px;color:#1982ad;}
-	.theAuthorCompany{font-size:14px;font-weight:bold;color:#000;}
-	.theDate{color:#a0a0a0;font-size:12px;margin-top:3px;}
-	.theText{font-size:33px;font-family:Georgia, "Times New Roman", Times, serif;line-height:1.6em;color:#000}
-/*	
-	.companyLogo{float:left;width:252px;}
-	.companyDetails{float:left;width:618px;padding-left:30px;}
-	.companyDetails h2{font-family:Georgia, "Times New Roman", Times, serif;font-size:24px;font-weight:normal;margin-top:2px;}
-	.companyDetails p{line-height:1.6em;font-size:14px;}
-*/	
+.theAuthorName{font-size:30px;color:#1982ad;}
+.theAuthorCompany{font-size:14px;font-weight:bold;color:#000;}
+.theDate{color:#a0a0a0;font-size:12px;margin-top:3px;}
+.theText{font-size:33px;font-family:Georgia, "Times New Roman", Times, serif;line-height:1.6em;color:#000}
+
 /* page style not the form style */
 .companyLogo{float:left;width:252px;}
 .companyDetails{margin-left:272px;display:block;color:#000;}
