--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -885,3 +885,73 @@ color: #777;}
     top:-1%;
     /*border:10px solid #ebecec;*/
 }
+
+.the-selected-widget-box{
+    width:194px;
+    height:284px;
+    border:#d6dfe6 1px solid;
+    position:absolute;
+    background:#ebf0f4;
+    right:0px;
+    top:-10px;
+    padding:8px;
+    text-align:center;
+    z-index:10;
+}
+.the-selected-widget-box img{margin:0 !important;}
+
+.blue{color:#447697;}
+#wizard{}
+.wizard-text-field,.wizard-select{
+    width: 85%;
+    display: block;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid #CCC;
+    margin: 10px 0px;
+    padding: 8px 8px;
+    font-size: 11px;
+    color: #777;	
+    font-family:Arial;
+}
+.underline{text-decoration:underline}
+.wizard-steps{width:666px;}
+.wizard-buttons{padding-bottom:20px;margin-top:20px;}
+.wizard-btn{background:#8e9caa;
+    color:#FFF;font-weight:bold;-webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    padding:6px 10px;font-size:14px;
+}
+.wizard-btn:hover{background-color:#4c7095}
+.wizard-btn:active{background-color:#305579;}
+
+.wizard-display-options{font-size:12px;margin-top:15px;}
+.wizard-display-options p{margin:2px 0px;}
+.wizard-display-options p:after,#wizard-preview-author-info:after{display:block;visibility:hidden;content:".";height:0;clear: both}
+.wizard-display-options label{width:180px;float:left;}
+.wizard-display-options input{width:20px;float:left;margin:2px 0px 0px 0px;}
+.wizard-feedback-preview{
+    display:block;
+    background:#EEE;
+    padding:5px;
+    margin:0 auto;
+    margin-top:10px;
+    width:250px;
+}
+#wizard-preview-box{
+    background:#FFF;
+    padding:15px;
+}
+.widget-preview-text{width:260px;color:#4b7ca0;font-size:14px;margin:0 auto;}
+#wizard-preview-avatar img{padding:0px !important;margin:0px !important;}
+#wizard-preview-avatar{float:left;width:48px;}	
+#wizard-preview-author-details{margin-left:60px;}
+#wizard-preview-author-name{font-weight:bold;}
+#wizard-preview-author-position{font-size:11px;}
+#wizard-preview-author-location{font-size:10px;}
+#wizard-preview-author-position span a{color:#b8b3ba;text-decoration:underline;}
+#wizard-preview-feedback-date{text-align:right;color:#b8b3ba;font-size:11px;}
+#wizard-preview-feedback-text{padding:10px 0px;}
+#wizard-preview-feedback-text .read-full{font-size:10px;color:#86bde4}
