--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -13,7 +13,7 @@ a:hover{color:#54a1c0;}
 div{position:relative;}
 
 #headerWrapper{
-	background:url(../images/gray-bg.jpg) repeat-x;
+	background:url(../../img/gray-bg.jpg) repeat-x;
 	height:42px;
 	width:100%;
 	box-shadow:#aaa 0px 1px 5px;
@@ -59,7 +59,7 @@ div{position:relative;}
 .companyLinks ul li{display:inline;padding:5px 5px 5px 10px;}
 .companyLinks ul li{border-right:1px solid #EEE;}
 .companyLinks ul li:last-child{border:none;}
-.companyLinks ul li a{padding:5px 2px 5px 24px;margin-right:10px;background:url(../images/companyLinkIcons.png) no-repeat;}
+.companyLinks ul li a{padding:5px 2px 5px 24px;margin-right:10px;background:url(../../img/companyLinkIcons.png) no-repeat;}
 .companyLinks ul li a.website{background-position:0px 1px;}
 .companyLinks ul li a.facebook{background-position:0px -25px;}
 .companyLinks ul li a.twitter{background-position:0px -50px;}
