--- a/public/css/widget_master/hosted-fullpage.css
+++ b/public/css/widget_master/hosted-fullpage.css
@@ -149,3 +149,12 @@ div{position:relative;}
 .left{float:left}
 .right{float:right}
 .center{margin:0 auto}
+
+.large-avatar {
+    box-shadow: 5px 5px 3px #888888;
+    display: none;
+    left: -1%;
+    position: absolute !important;
+    top: -1%;
+    z-index: 999999;
+}
